# poldracklab-base

./: .pre-commit-config.yaml  Makefile  README.md  get_balanced_folds.py  make_docs.sh  pyproject.toml  setup.py  spm_hrf.py
.github/workflows/: build_docs.yml  python-app.yml  static.yml
docs/poldracklab/: fmri.html  index.html  ml.html  pubmed.html  stats.html  utils.html
docs/poldracklab/ml/: cv.html  index.html
network/: participation_index.py
poldracklab/machine-learning/: tests.py
poldracklab/utils/: run_shell_cmd.py
src/poldracklab/: __init__.py  fmri.py  ml.py  pubmed.py  stats.py  utils.py
src/poldracklab/fmri/: spm_hrf.py  test_fmri.py
src/poldracklab/machine-learning/: get_balanced_folds.py
src/poldracklab/ml/: balancedKFold.py  cv.py
src/poldracklab/topic_modeling/: load_topicdata.py
src/poldracklab/utils/: run_shell_cmd.py  test_utils.py
tests/: test_fmri.py  test_ml.py  test_pubmed.py  test_stats.py  test_utils.py
