[project]
name = "poldracklab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.31.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
]
